--- a/sc/pom.xml
+++ b/sc/pom.xml
@@ -15,6 +15,8 @@
 	<description>SMSC project for Spring Boot</description>
 	<properties>
 		<java.version>11</java.version>
+			<sonar.organization>praguru14</sonar.organization>
+			<sonar.host.url>https://sonarcloud.io</sonar.host.url>
 	</properties>
 	<dependencies>
 <!--		<dependency>-->
