--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 server.port=8081
+management.endpoints.web.exposure.include=*
+spring.jpa.defer-datasource-initialization=true
+spring.datasource.url=jdbc:h2:mem:testdb
