--- a/SM/src/main/resources/application.properties
+++ b/SM/src/main/resources/application.properties
@@ -2,3 +2,5 @@ server.port=8081
 management.endpoints.web.exposure.include=*
 spring.jpa.defer-datasource-initialization=true
 spring.datasource.url=jdbc:h2:mem:testdb
+spring.jpa.show-sql=true
+spring.h2.console.enabled=true
